test/conformance/chainsaw/mutating-policies/context/resource/match-conditions/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
   name: data-cm
data:
  env: production
