test/conformance/chainsaw/mutating-policies/context/resource/match-conditions/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: fetch-with-matchconditions
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: add-env-label
  - name: create configmap
    try:
    - create:
        file: cm.yaml
  - name: create deployment without env label
    try:
    - create:
        file: deployment-namespaced.yaml
  - name: check deployment was mutated
    try:
    - assert:
        file: deployment-mutated-namespaced.yaml
